--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-k" style="background-image: url(assets/images/mbr-1-2000x1328.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-k" style="background-image: url(assets/images/mbr-2000x1334.jpg);">
 
     
 
@@ -998,7 +998,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="KAPCSOLAT">
 
-                        <input type="hidden" value="0+cwWzAsICIMGRm6Eg4L+To/G6fA/2gGd2AdKYZfh+QQiHHuySDsdbGmcmlkAvYQ9kICH/lLg9WOshUbKf2jQ/89N9Kx8JCp0FUoyIimhLhVcalizRASX/jHCFjvozsQ" data-form-email="true">
+                        <input type="hidden" value="qQCHFpiIoA4yXQjKBCuZRbnhNGLjf+Vx3Kv1Aizn7HwT9gPW2bUc90eagl15FfytVeciGYaNWI1BmFF1b1jj/qyP8o2XJoTQlzgjeiA2AHrlYQse9d+FV16CoT7HEO5W" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
