--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-f" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-f" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     
 
@@ -226,7 +226,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="r5HMs31CKv+9Txog5gMkL2ZpKCahYhxncOJ7MumkVxI83HzxMqcdfmU0hBA9rDETdpeZcAJoHTusqCs2N5dmoqATo3Iy48lkpK/u0MJO6Kv69oip1dDwFOXFquR3XGAS" data-form-email="true">
+                        <input type="hidden" value="6L1dfuT3B2e9mOfDEOzUaImVwdLJvfRkZ1uoIQa9MNpNKRCedAFm4Y9SG1ngUZX6qLK97R8mYhwuFUF/loxStzOhdUAky6jmu8yLJs3JBdN6pZ7pX2b+1auY1Sv2VxiY" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -311,7 +311,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="wgCaVdXB2btY80c6bKIEmQ7BBs90esfN4UirBKU39OSVffWknDMo5jByo4vK5b/jv3WLBLMERZ0QEU7YXQSoyr/cmrNPPnJ5Ko2NADslk7mjkAbMXzITCoMl5lQ1VH2N" data-form-email="true">
+                    <input type="hidden" value="i6YxpZmEBLXFnwQqqH04Jnsv6TwEI50wuSdYB17jQFevmIeIvIXnGa1rwOyVhEArhSZ6lq9JwIfitGx4/8wQITW+AVsMM5rfyO+Fm3LLVaKwXfwqEKMcrlB+Pk/Sesll" data-form-email="true">
 
                     
 
