--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-k" style="background-image: url(assets/images/mbr-2000x1334.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-k" style="background-image: url(assets/images/3051224-poster-1280-artist-hire-next-business-consultant-2000x1125.jpg);">
 
     
 
@@ -998,7 +998,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="KAPCSOLAT">
 
-                        <input type="hidden" value="lAV0FxXmoJcbw1XJ2m2cnLaXmr3N9gxuma8Dfs5W5c6iqQ4e/+LnULjoNCdMuHDhKvTI9qYxHEXZbAOXQfETl47RSAOA/UlR4/280UTG/fYzFpZtLZdU1vvtBc54cG4V" data-form-email="true">
+                        <input type="hidden" value="pQ1ZqRev5J0A+qoy7XacfvdomLOP/GH8esQRGTxTeKkfch3nTZafiw6lMZuPl6Pq+QGr7Z+kgFZQdrmoaciZCWbT0HWkhEZjPcnsAworxheSgQOvmohKDtD4ezOLwy+2" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
