--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-k" style="background-image: url(assets/images/3051224-poster-1280-artist-hire-next-business-consultant-2000x1125.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-k" style="background-image: url(assets/images/httr-2000x1333.jpg);">
 
-    
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
     <div class="mbr-table-cell">
 
@@ -87,10 +87,10 @@
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider-m" class="" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="5"></li>
+                    <li data-app-prevent-settings="" data-target="#slider-m" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="5"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
-                    <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/olb-2000x1333.jpg);">
+                    <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/mk-jo-2000x13330.jpg);">
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide container">
@@ -998,7 +998,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="KAPCSOLAT">
 
-                        <input type="hidden" value="pQ1ZqRev5J0A+qoy7XacfvdomLOP/GH8esQRGTxTeKkfch3nTZafiw6lMZuPl6Pq+QGr7Z+kgFZQdrmoaciZCWbT0HWkhEZjPcnsAworxheSgQOvmohKDtD4ezOLwy+2" data-form-email="true">
+                        <input type="hidden" value="T5ekrLgX8nArnIgDLAmBDs8PFLymEA+sJpwxl7lZGPhLFo4HniTDxSFuaws4DISV8sObSe2oSQnWdJWtZB0nevPpz7HaPkWEE8ptHX+lijOHnjTio/d0O/4oTkO5sPK4" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
