--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-f" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-f" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     
 
@@ -226,7 +226,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="QZDqTju+B2cmBBtFJQ1sKuCpGeCOMBuZoEG81N9dLdJYWNayW2nPsclB/lB/J4BlOb/xMh3MwM75zXw+zSIIzoaj5BGUjCR9qp0vQ96u9iDjT9wM4WGDJJINGO+1XSFd" data-form-email="true">
+                        <input type="hidden" value="2qTy2DJulEhAJk8944CopO1E9dBiO/Q9JIwBCDM4/jOi7kkPdN7UthRb90tKzNvpUJDO3GuTQmBpZcavorwrTqNkw0ssfdTapFaKP+PSXL/46dqfKRCb2HqxO3mJ0nuo" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -311,7 +311,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="FFsBGYcKDTvOt9aV2GtpvSsN/zlrEke41fds+UNp4ai8IoI2p6J/X1ERK6UFiB8DRs8CrbO3FSWlKVJMAU7X/E8t+mZgGJU71jy5IE8qJevVi6V4EuPO3Al+Ik8jD15b" data-form-email="true">
+                    <input type="hidden" value="gwuwVM75+8vyJWtl7xzV39miaA49Ntfbjd+nY0hqMTmQ9YP+b/SUqAFef6wpzSHlL4hBVesYf8XwT+NMcQdcnDWZOZm8GxRvf/FCiU58MLFISpNXvL+qSn/CS4o7Jgjc" data-form-email="true">
 
                     
 
