create github pages

--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-f" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-f" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     
 
@@ -226,7 +226,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="2qTy2DJulEhAJk8944CopO1E9dBiO/Q9JIwBCDM4/jOi7kkPdN7UthRb90tKzNvpUJDO3GuTQmBpZcavorwrTqNkw0ssfdTapFaKP+PSXL/46dqfKRCb2HqxO3mJ0nuo" data-form-email="true">
+                        <input type="hidden" value="xDemsviWUea6XdmN1899k7hQVF3SYgIFOxu5IEcUMslXESDC9FET0xA865fiD9l3EfGMd1hbXreyg9Bj1/keoSQWQbzFJo6H6MerW1p3r6SktTZ7au/zjpMqhv4CNOv9" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -311,7 +311,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="gwuwVM75+8vyJWtl7xzV39miaA49Ntfbjd+nY0hqMTmQ9YP+b/SUqAFef6wpzSHlL4hBVesYf8XwT+NMcQdcnDWZOZm8GxRvf/FCiU58MLFISpNXvL+qSn/CS4o7Jgjc" data-form-email="true">
+                    <input type="hidden" value="7g+TLo8koxT9B3T9rUTTSceDdHmrK98bQRanTxXaMdmRvjj63DwmS5AeEAIHA2yYMDwP/NuMY2lxKhuw/claQheatjMYu0v8wUVX3lPpPnsJR4o71lIbKd57RCzXiceE" data-form-email="true">
 
                     
 
