--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-k" style="background-image: url(assets/images/3051224-poster-1280-artist-hire-next-business-consultant-2000x1125.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-k" style="background-image: url(assets/images/3051224-poster-1280-artist-hire-next-business-consultant-2000x1125.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -90,7 +90,7 @@
                     <li data-app-prevent-settings="" data-target="#slider-m" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider-m" data-slide-to="5"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
-                    <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/mk-jo-2000x13332.jpg);">
+                    <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/ezzowebkeyboard-1-2000x1500.jpg);">
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide container">
@@ -998,7 +998,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="KAPCSOLAT">
 
-                        <input type="hidden" value="dHkgEi1FiTOYlmAScnHwexRwYWUVb/H+qp0741Iy22Dym/q65kzzZNqsweuNSCAaByu3P0CcJgjecCc/kdcAQ3AbE36YEN+pBCuCexA5Hj6dntNGacL8AqT59sJNEwCC" data-form-email="true">
+                        <input type="hidden" value="UyEMI7mTohyPErzhro/EgEN0opoQkhwDeGq6MAXiJqu+bMwnjDwXPMMYtRjPvqi4xrnV60Z37iMcoIJDb/Kp47IJZT2FXptRUNEdV1dMN7FXP6otf4M7kY2x6KQVFn/l" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
