--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-f" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-f" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     
 
@@ -226,7 +226,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="xDemsviWUea6XdmN1899k7hQVF3SYgIFOxu5IEcUMslXESDC9FET0xA865fiD9l3EfGMd1hbXreyg9Bj1/keoSQWQbzFJo6H6MerW1p3r6SktTZ7au/zjpMqhv4CNOv9" data-form-email="true">
+                        <input type="hidden" value="DmWOZOrTVvey7uND5qEFuMKR2fUkmg8qe8Mf54H4kn24kb6FL8P6N7HRQIjVp7gIvY2Kw1occd2K7y2UreHWAMPk/c0Cu2wZs2MwyZBOlOTc1j1toh4dmivcvugTSuZZ" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -311,7 +311,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="7g+TLo8koxT9B3T9rUTTSceDdHmrK98bQRanTxXaMdmRvjj63DwmS5AeEAIHA2yYMDwP/NuMY2lxKhuw/claQheatjMYu0v8wUVX3lPpPnsJR4o71lIbKd57RCzXiceE" data-form-email="true">
+                    <input type="hidden" value="481oQ8W0Erly0j6kEDRrTxY937CpU58KLro1dN7hO9Va0HUKwH3A6a/Gs80pz+J1kdXsmc3A3aWl1/pTlBUpn97qr0HfTpZqq3KyKCNIX/Do05heeGqxdsbmRq4DU0NY" data-form-email="true">
 
                     
 
